--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    timeout-minutes: 356
     steps:
     - uses: actions/checkout@v4
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    - name: Testing
+      uses: rdp-studio/ssh2actions@main
